exports[`when the user is logged in should render the create user page correctly 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
  <div>
    <p>
      Create a User
    </p>
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        placeholder="First Name"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Last Name"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Email"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="" />
      <input
        type="submit" />
    </form>
  </div>
</div>
`;

exports[`when the user is logged in should render the protected page correctly 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
  <h3>
    Protected
  </h3>
</div>
`;

exports[`when the user is logged in should render the public page correctly 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
  <h3>
    Public
  </h3>
</div>
`;

exports[`when the user is logged in should render the root page correctly 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
</div>
`;

exports[`when the user is logged out should render the create user page correctly 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
  <div>
    <p>
      You must log in to view the page at 
      /createuser
    </p>
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        placeholder="Email"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="" />
      <input
        type="submit" />
    </form>
  </div>
</div>
`;

exports[`when the user is logged out should render the protected page correctly 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
  <div>
    <p>
      You must log in to view the page at 
      /protected
    </p>
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        placeholder="Email"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="" />
      <input
        type="submit" />
    </form>
  </div>
</div>
`;

exports[`when the user is logged out should render the public page correctly 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
  <h3>
    Public
  </h3>
</div>
`;

exports[`when the user is logged out should render the root page correctly 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/crossings"
        onClick={[Function]}>
        List Crossings (Public)
      </a>
    </li>
    <li>
      <a
        href="/users"
        onClick={[Function]}>
        List Users
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User (Protected)
      </a>
    </li>
    <li>
      <a
        href="/updatestatus"
        onClick={[Function]}>
        Update Crossing Status (Protected)
      </a>
    </li>
  </ul>
</div>
`;
